tests/NormalTests/paczka2/big_fuzzy/86831206.err
Error in line 6: 1JaSUUxz7 S467 65,0
Error in line 14: A502 A441 93,6
Error in line 17: 1JaSUUxz7 A441 82,9
Error in line 24: FEt A441 -3,7
Error in line 18: A502 A502 19,8
Error in line 4: duuZR3byyL8 S467 0,8
Error in line 30: duuZR3byyL8 A441 29,6
Error in line 27: 1JaSUUxz7 A502 144,8
Error in line 22: 665x A502 428,0
Error in line 47: duuZR3byyL8 S467 95,8
Error in line 48: a94RBGxEU A502 28,0
Error in line 35: 1JaSUUxz7 A441 72,3
Error in line 65: duuZR3byyL8 A133 48,2
Error in line 15: FEt A441 77,1
Error in line 68: 665x A133 94,8
Error in line 85: cNcbTj A502 88,7
Error in line 80: 665x A502 17,2
Error in line 120: 1JaSUUxz7 S467 41,1
Error in line 119: A502 A502 47,0
Error in line 122: cNcbTj A502 86,9
Error in line 141: 1JaSUUxz7 A133 97,2
Error in line 107: 665x A133 42,9
Error in line 148: 665x A502 82,0
Error in line 150: A502 S467 74,4
Error in line 147: a94RBGxEU S467 58,6
Error in line 144: duuZR3byyL8 A133 71,8
Error in line 154: A502 A441 30,1
Error in line 155: a94RBGxEU A133 5,2
Error in line 179: 665x A502 65,7
Error in line 182: duuZR3byyL8 A133 99,9
Error in line 197: 665x A441 2,57
Error in line 200: a94RBGxEU S467 19,9
Error in line 204: A502 A441 4,8
Error in line 203: a94RBGxEU A502 62,0
Error in line 201: duuZR3byyL8 S467 47,1
Error in line 199: 665x A441 3,7
Error in line 215: 665x A133 57,4
